Python practice questions with bigrams

--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -61,31 +61,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The original list is : ['geeksforgeeks is best', 'I love it']\n",
-      "The formed bigrams are : [('geeksforgeeks', 'is'), ('is', 'best'), ('I', 'love'), ('love', 'it')]\n"
+      "[('Write', 'a'), ('a', 'function'), ('function', 'that'), ('that', 'can'), ('can', 'take'), ('take', 'a'), ('a', 'string'), ('string', 'and'), ('and', 'return'), ('return', 'a'), ('a', 'list'), ('list', 'of'), ('of', 'bigrams')]\n"
      ]
     }
    ],
    "source": [
-    "test_list = ['geeksforgeeks is best', 'I love it']\n",
-    "  \n",
-    "# printing the original list \n",
-    "print (\"The original list is : \" + str(test_list))\n",
-    "  \n",
-    "# using list comprehension + enumerate() + split()\n",
-    "# for Bigram formation\n",
-    "res = [(x, i.split()[j + 1]) for i in test_list \n",
-    "       for j, x in enumerate(i.split()) if j < len(i.split()) - 1]\n",
-    "  \n",
-    "# printing result\n",
-    "print (\"The formed bigrams are : \" + str(res))"
+    "text = \"Write a function that can take a string and return a list of bigrams\"\n",
+    "words = text.split()\n",
+    "bigram_list = []\n",
+    "\n",
+    "for word in zip(text.split()[:-1], text.split()[1:]):\n",
+    "    bigram_list.append(word)\n",
+    "print(bigram_list)"
    ]
   }
  ],
@@ -105,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
