Python practice questions with bigrams

--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -5,8 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given a dictionary with keys of letters and values of a list of letters, write a function closest_key\n",
-    "to find the key with the input value closest to the beginning of the list."
+    "**1** **-Given a dictionary with keys of letters and values of a list of letters, write a function closest_key**\n",
+    "**to find the key with the input value closest to the beginning of the list.**"
    ]
   },
   {
@@ -56,18 +56,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function that can take a string and return a list of bigrams."
+    "**2** **-Write a function that can take a string and return a list of bigrams**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "List of the words in the sentence:\n",
+      "Write a function that can take a string and return a list of bigrams\n",
+      "\n",
+      "list of bigrams:\n",
       "[('Write', 'a'), ('a', 'function'), ('function', 'that'), ('that', 'can'), ('can', 'take'), ('take', 'a'), ('a', 'string'), ('string', 'and'), ('and', 'return'), ('return', 'a'), ('a', 'list'), ('list', 'of'), ('of', 'bigrams')]\n"
      ]
     }
@@ -75,10 +79,14 @@
    "source": [
     "text = \"Write a function that can take a string and return a list of bigrams\"\n",
     "words = text.split()\n",
+    "print(\"List of the words in the sentence:\")\n",
+    "print (text)\n",
+    "print() # skip a line\n",
     "bigram_list = []\n",
     "\n",
     "for word in zip(text.split()[:-1], text.split()[1:]):\n",
     "    bigram_list.append(word)\n",
+    "print(\"list of bigrams:\")\n",
     "print(bigram_list)"
    ]
   }
