Python practice questions- sum of array elements

--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -89,6 +89,53 @@
     "print(\"list of bigrams:\")\n",
     "print(bigram_list)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3** **-Given an array of integers called array and an integer called target, return indices of the two numbers such that they add up to target.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "indices of the two numbers such that they add up to target : [1, 7, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_of_two_elem(array, size, target):\n",
+    "    array1 = []\n",
+    "    for a in range(0, size - 1):\n",
+    "        for b in range(a + 1, size):\n",
+    "            if array[a] + array[b] == target:\n",
+    "                array1.append(a)\n",
+    "                array1.append(b)\n",
+    "    \n",
+    "    return array1\n",
+    "                \n",
+    "\n",
+    " \n",
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "    array = [2, 3, -1, -6, 5, 4, 6, 7, 0]\n",
+    "    target = int(10)\n",
+    "    size = len(array)\n",
+    "    result = sum_of_two_elem(array, size, target)\n",
+    "    \n",
+    "    print(\"indices of the two numbers such that they add up to target : \" + str(result))\n",
+    "                    \n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
