--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +136,164 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4** **-Given an array of integers called array and an integer called target, return indices of the two numbers such that they add up to target.**\n",
+    "\n",
+    "**List Comprehension-1**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "indices of the two numbers such that they add up to target: [1, 7, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "array = [2, 3, -1, -6, 5, 4, 6, 7, 0]\n",
+    "target = int(10)\n",
+    "size = len(array)\n",
+    "array1 = []\n",
+    "array2 = [(array1.append(a), array1.append(b)) for a in range(0, size - 1) for b in range(a + 1, size) if array[a] + array[b] == target ]\n",
+    "    \n",
+    "print (\"indices of the two numbers such that they add up to target: \" + str(array1))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4** **-Given an array of integers called array and an integer called target, return indices of the two numbers such that they add up to target.**\n",
+    "\n",
+    "**List Comprehension-2**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "indices of the two numbers such that they add up to target : [(1, 7), (5, 6)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [2, 3, -1, -6, 5, 4, 6, 7, 0]\n",
+    "target = int(10)\n",
+    "size = len(array)\n",
+    "array2 = [(a, b) for a in range(0, size - 1) for b in range(a + 1, size) if array[a] + array[b] == target ]\n",
+    "print (\"indices of the two numbers such that they add up to target : \" + str(array2))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**5** **-Longest Substring Without Repeating Characters**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original String : pwwkew\n",
+      "\n",
+      "\n",
+      "String without repeating characters: pwke\n"
+     ]
+    }
+   ],
+   "source": [
+    "def longestString(string_1):\n",
+    "    \n",
+    "    \n",
+    "    size = len(string_1)\n",
+    "    print(\"Original String : \" + string_1)\n",
+    "    str_2 = \"\"\n",
+    "    print(str_2)\n",
+    "    for a in range(0, size - 1):\n",
+    "        if string_1[a] not in str_2:\n",
+    "            str_2 += string_1[a]\n",
+    "            str_2\n",
+    "             \n",
+    "    return str_2\n",
+    "                    \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "   str_1 = \"pwwkew\"\n",
+    "   str_1 = str_1.lower()\n",
+    "   returned_string = longestString(str_1)\n",
+    "   print() # skip a line\n",
+    "   print(\"String without repeating characters: \" + str(returned_string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "String without repeating characters: 1.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def median_of_arrays(array_1, array_2):\n",
+    "    \n",
+    "    \n",
+    "    size = len(array_2)\n",
+    "    median = 0\n",
+    "    array_1.sort()\n",
+    "    mid = len(array_1) // 2\n",
+    "    if size == 0:\n",
+    "        median = (array_1[mid] + array_1[~mid]) / 2\n",
+    "        return median\n",
+    "    for a in range(0, size):\n",
+    "        item = array_2[a]\n",
+    "        array_1.append(item)\n",
+    "        array_1.sort()\n",
+    "        mid = len(array_1) // 2\n",
+    "        median = (array_1[mid] + array_1[~mid]) / 2\n",
+    "        \n",
+    "    return array_1, median          \n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "   arr_1 = [1, 2]\n",
+    "   arr_2 = []\n",
+    "   median = median_of_arrays(arr_1, arr_2)\n",
+    "   print() # skip a line\n",
+    "   print(\"String without repeating characters: \" + str(median))"
+   ]
   }
  ],
  "metadata": {
@@ -154,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
