Python practice questions- median of two combined arrays

--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -252,6 +252,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**6- Finding the mediam of two combined arrays**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
