--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -302,6 +302,220 @@
     "   print() # skip a line\n",
     "   print(\"String without repeating characters: \" + str(median))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**6- Tuple unpacking**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=15, b=25\n",
+      "a=15, b=25\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 15\n",
+    "b = 25\n",
+    "\n",
+    "print(f'a={a}, b={b}')\n",
+    "\n",
+    "a, b = a, b\n",
+    "\n",
+    "print(f'a={a}, b={b}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**7- Sum of arrays**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of array: 341\n"
+     ]
+    }
+   ],
+   "source": [
+    "def arraySum (array):\n",
+    "    \n",
+    "    sum = 0\n",
+    "    \n",
+    "    for a in array:\n",
+    "        sum = sum + a\n",
+    "    \n",
+    "    \n",
+    "    return sum\n",
+    "if __name__ == '__main__':\n",
+    "    \n",
+    "    array = [1, -1, -6, 9, 99, 98, 76, 65]\n",
+    "    \n",
+    "    print (\"Sum of array: \" + str(arraySum(array)))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**8- Return points of two contenders**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def comparePoints(a, b):\n",
+    "    # Write your code here\n",
+    "    \n",
+    "    bob_score =0\n",
+    "    alice_score = 0\n",
+    "    \n",
+    "    for i in range(0, len(a)):\n",
+    "            if a[i] == b[i]:\n",
+    "                alice_score +=0\n",
+    "                bob_score +=0  \n",
+    "            if a[i] > b[i]:\n",
+    "                alice_score +=1\n",
+    "            if a[i] < b[i]:\n",
+    "                bob_score +=1\n",
+    "    return bob_score, alice_score\n",
+    "                \n",
+    "        \n",
+    "if __name__ == '__main__':\n",
+    "    \n",
+    "    a = [1, 2, 3]\n",
+    "    b = [3, 2, 1]\n",
+    "    \n",
+    "    print (comparePoints(a,b))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**9- Write a function that takes in a list of dictionaries with both a key and list of integers, and returns a dictionary with the standard deviation of each list.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "items_a:  [4, 5, 2, 3, 4, 5, 2, 3]\n",
+      "sum_a:  28\n",
+      "len_a:  8\n",
+      "mean_a:  3.5\n",
+      "standard_devi_a:  2.0\n",
+      "\n",
+      "items_b:  [1, 1, 34, 12, 40, 3, 9, 7]\n",
+      "sum_b:  107\n",
+      "len_b:  8\n",
+      "mean_b:  13.375\n",
+      "standard_devi_b:  6.0\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def standard_deviation(list_dict):\n",
+    "\n",
+    "    print (\"items_a: \" , (list_dict[0]['values']))\n",
+    "\n",
+    "    list_a = list_dict[0]['values']\n",
+    "\n",
+    "    sum_a = 0\n",
+    "    mean_a = 0\n",
+    "    sum_sd_a = 0\n",
+    "    for a in list_a:\n",
+    "        sum_a = sum_a + a\n",
+    "        mean_a = sum_a /len(list_a)\n",
+    "        len_a = len(list_a)\n",
+    "        sum_sd_a = sum_sd_a + mean_a-a\n",
+    "        standard_devi = math.sqrt(pow(sum_sd_a//len_a, 2))\n",
+    "\n",
+    "    print (\"sum_a: \" , sum_a)\n",
+    "    print (\"len_a: \", len(list_a))\n",
+    "    print(\"mean_a: \", mean_a)\n",
+    "    print(\"standard_devi_a: \", standard_devi)\n",
+    "\n",
+    "\n",
+    "    print()\n",
+    "    print (\"items_b: \" , (input[1]['values']))\n",
+    "\n",
+    "    list_b = list_dict[1]['values']\n",
+    "\n",
+    "    sum_b = 0\n",
+    "    mean_b = 0\n",
+    "    sum_sd_b = 0\n",
+    "    for b in list_b:\n",
+    "        sum_b = sum_b + b\n",
+    "        mean_b = sum_b /len(list_b)\n",
+    "        len_b = len(list_b)\n",
+    "        sum_sd_b = sum_sd_b + mean_b-b\n",
+    "        standard_devi = math.sqrt(pow(sum_sd_b//len_b, 2))\n",
+    "\n",
+    "    print(\"sum_b: \", sum_b)\n",
+    "    print (\"len_b: \", len(list_b))\n",
+    "    print(\"mean_b: \", mean_b)\n",
+    "    print(\"standard_devi_b: \", standard_devi)\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    \n",
+    "    list_dict = [\n",
+    "        {\n",
+    "            'key': 'list1',\n",
+    "            'values': [4,5,2,3,4,5,2,3],\n",
+    "        },\n",
+    "        {\n",
+    "            'key': 'list2',\n",
+    "            'values': [1,1,34,12,40,3,9,7],\n",
+    "        }\n",
+    "    ]\n",
+    "    \n",
+    "    print (standard_deviation(list_dict))\n",
+    "    \n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -320,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
