--- a/python_practice.ipynb
+++ b/python_practice.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -443,13 +443,19 @@
       "len_a:  8\n",
       "mean_a:  3.5\n",
       "standard_devi_a:  2.0\n",
-      "\n",
-      "items_b:  [1, 1, 34, 12, 40, 3, 9, 7]\n",
-      "sum_b:  107\n",
-      "len_b:  8\n",
-      "mean_b:  13.375\n",
-      "standard_devi_b:  6.0\n",
-      "None\n"
+      "\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [24], line 58\u001b[0m\n\u001b[0;32m     45\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     47\u001b[0m     list_dict \u001b[39m=\u001b[39m [\n\u001b[0;32m     48\u001b[0m         {\n\u001b[0;32m     49\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mkey\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mlist1\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     55\u001b[0m         }\n\u001b[0;32m     56\u001b[0m     ]\n\u001b[1;32m---> 58\u001b[0m     \u001b[39mprint\u001b[39m (standard_deviation(list_dict))\n",
+      "Cell \u001b[1;32mIn [24], line 26\u001b[0m, in \u001b[0;36mstandard_deviation\u001b[1;34m(list_dict)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mstandard_devi_a: \u001b[39m\u001b[39m\"\u001b[39m, standard_devi)\n\u001b[0;32m     25\u001b[0m \u001b[39mprint\u001b[39m()\n\u001b[1;32m---> 26\u001b[0m \u001b[39mprint\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39mitems_b: \u001b[39m\u001b[39m\"\u001b[39m , (\u001b[39minput\u001b[39;49m[\u001b[39m1\u001b[39;49m][\u001b[39m'\u001b[39m\u001b[39mvalues\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[0;32m     28\u001b[0m list_b \u001b[39m=\u001b[39m list_dict[\u001b[39m1\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mvalues\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     30\u001b[0m sum_b \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'method' object is not subscriptable"
      ]
     }
    ],
@@ -515,6 +521,476 @@
     "    \n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "\n",
+    "def convert(self, s: str, num_rows: int) -> str:\n",
+    "        if num_rows == 1:\n",
+    "            return s\n",
+    "        \n",
+    "        n = len(s)\n",
+    "        sections = math.ceil(n / (2 * num_rows - 2.0))\n",
+    "        num_cols = sections * (num_rows - 1)\n",
+    "            \n",
+    "        matrix = [[' '] * num_cols for _ in range(num_rows)]\n",
+    "            \n",
+    "        curr_row, curr_col = 0, 0\n",
+    "        curr_string_index = 0\n",
+    "            \n",
+    "        # Iterate in zig-zag pattern on matrix and fill it with string characters.\n",
+    "        while curr_string_index < n:\n",
+    "            # Move down.\n",
+    "            while curr_row < num_rows and curr_string_index < n:\n",
+    "                matrix[curr_row][curr_col] = s[curr_string_index]\n",
+    "                curr_row += 1\n",
+    "                curr_string_index += 1\n",
+    "                \n",
+    "            curr_row -= 2\n",
+    "            curr_col += 1\n",
+    "            \n",
+    "            # Move up (with moving right also).\n",
+    "            while curr_row > 0 and curr_col < num_cols and curr_string_index < n:\n",
+    "                matrix[curr_row][curr_col] = s[curr_string_index]\n",
+    "                curr_row -= 1\n",
+    "                curr_col += 1\n",
+    "                curr_string_index += 1\n",
+    "        \n",
+    "        answer = \"\"\n",
+    "        for row in matrix:\n",
+    "            answer += \"\".join(row)\n",
+    "            \n",
+    "        return answer.replace(\" \", \"\")\n",
+    "            \n",
+    "       \n",
+    "if __name__ == '__main__':\n",
+    "    \n",
+    "    123\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**10 - Reverse an integer**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The reverse number is : -4321\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_integer(num):\n",
+    "    \n",
+    "    rev = 0\n",
+    "    none = int(0)\n",
+    "    if num > 0:\n",
+    "        while(num != 0):\n",
+    "            a = num % 10\n",
+    "            rev = rev * 10 + a\n",
+    "            num = num // 10\n",
+    "        return rev\n",
+    "    \n",
+    "    if num < 0:\n",
+    "        num = abs(num)\n",
+    "        while(num != 0):\n",
+    "            a = num % 10\n",
+    "            rev = rev * 10 + a\n",
+    "            num = num // 10\n",
+    "        return -abs(rev)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    \n",
+    "    integer = -123400\n",
+    "    \n",
+    "    print(\"The reverse number is : {}\".format(reverse_integer(integer))) \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**11 - Reverse Integer with Constraints** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2147483648\n",
+      "2147483647\n",
+      "The reverse number is : 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_integer(x):\n",
+    "        rev = 0\n",
+    "        rev = int(rev)\n",
+    "        none = 0\n",
+    "        print (-2**31)\n",
+    "        print (((2**31)-1))\n",
+    "        # if ((-2**31) > x) and (x < (2**(31)-1)):\n",
+    "        if (x == 0):\n",
+    "            return 0\n",
+    "        if (x <= -2**31):\n",
+    "            return 0\n",
+    "        if (x >= ((2**31)-1)):\n",
+    "            return 0\n",
+    "        if (x > none):\n",
+    "                while(x != 0):\n",
+    "                    a = x % 10\n",
+    "                    rev = (rev * 10) + a\n",
+    "                    x = x // 10\n",
+    "                    if (rev >= ((2**31)-1)):\n",
+    "                        return 0\n",
+    "                return int(rev)\n",
+    "            \n",
+    "        if (x < none):\n",
+    "                x = abs(x)\n",
+    "                while(x != 0):\n",
+    "                    a = x % 10\n",
+    "                    rev = (rev * 10) + a\n",
+    "                    x = x // 10\n",
+    "                    if (-abs(rev) <= -2**31):\n",
+    "                        return 0\n",
+    "                rev = -abs(rev)\n",
+    "                return int(rev)\n",
+    "                    \n",
+    "            \n",
+    "if __name__ == '__main__':\n",
+    "    \n",
+    "    integer = -1563847412\n",
+    "    \n",
+    "    print(\"The reverse number is : {}\".format(reverse_integer(integer))) "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**12 - Adding Up Two Lists**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['9', '1', '2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [0, 2, 3, 4]\n",
+    "l2 = [0, 6, 7, 8]\n",
+    "l3 = [6, 8, 10, 12]\n",
+    "l4 = [6, 9, 1 , 2]\n",
+    "\n",
+    "l1 = list(l1)\n",
+    "\n",
+    "list_final = []\n",
+    "str_num1 = ''\n",
+    "str_num2 = ''\n",
+    "for a in range(len(l1)):\n",
+    "    str_num1 = str_num1 + str(l1[a])\n",
+    "    str_num2 = str_num2 + str(l2[a])\n",
+    "    num1 = int(str_num1)\n",
+    "    num2 = int(str_num2)\n",
+    "    num_sum = num1 + num2\n",
+    "    num_sum = str(num_sum)\n",
+    "    \n",
+    "lst = []\n",
+    " \n",
+    "for letter in num_sum:\n",
+    "    lst.append(letter)\n",
+    "    if lst[0] == '0':\n",
+    "        lst.remove(0)\n",
+    "        \n",
+    "    \n",
+    "# print (str_num1)\n",
+    "# print (str_num2)\n",
+    "print (lst)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**13 - Linked List**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python program for traversal of a linked list\n",
+    "# Node class\n",
+    " \n",
+    " \n",
+    "class Node:\n",
+    " \n",
+    "    # Function to initialise the node object\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data  # Assign data\n",
+    "        self.next = None  # Initialize next as null\n",
+    " \n",
+    " \n",
+    "# Linked List class contains a Node object\n",
+    "class LinkedList:\n",
+    " \n",
+    "    # Function to initialize head\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    " \n",
+    "    # This function prints contents of linked list\n",
+    "    # starting from head\n",
+    "    def printList(self):\n",
+    "        temp = self.head\n",
+    "        while (temp):\n",
+    "            print(temp.data)\n",
+    "            temp = temp.next\n",
+    " \n",
+    " \n",
+    "# Code execution starts here\n",
+    "if __name__ == '__main__':\n",
+    " \n",
+    "    # Start with the empty list\n",
+    "    llist = LinkedList()\n",
+    " \n",
+    "    llist.head = Node(1)\n",
+    "    second = Node(2)\n",
+    "    third = Node(3)\n",
+    " \n",
+    "    llist.head.next = second  # Link first node with second\n",
+    "    second.next = third  # Link second node with the third node\n",
+    " \n",
+    "    llist.printList()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**14 - Ratio of Numbers**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.600000\n",
+      "0.400000\n",
+      "0.000000\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ratio_of_numbers(arr):\n",
+    "    \n",
+    "    len_list = len(arr)\n",
+    "    zero_count = 0\n",
+    "    positive_count = 0\n",
+    "    negative_count = 0\n",
+    "    \n",
+    "    for a in range (len_list):\n",
+    "        if arr[a] > 0:\n",
+    "            positive_count += 1\n",
+    "        elif arr[a] < 0:\n",
+    "            negative_count += 1\n",
+    "        elif arr[a] == 0:\n",
+    "            zero_count += 1\n",
+    "            \n",
+    "    print ( format(positive_count/len_list, '.6f'))\n",
+    "        \n",
+    "    print ( format(negative_count/len_list, '.6f'))\n",
+    "        \n",
+    "    print ( format(zero_count/len_list, '.6f'))\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "     \n",
+    "     list_a = [-4, 3, -9, 4, 1]\n",
+    "     print (ratio_of_numbers(list_a))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**15 - Right Triagnle**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     #\n",
+      "    ##\n",
+      "   ###\n",
+      "  ####\n",
+      " #####\n",
+      "######\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def right_triangle(n):\n",
+    "    \n",
+    "    count = 0\n",
+    "    count2 = n\n",
+    "    for a in range (n):\n",
+    "        count += 1\n",
+    "        count2 -= 1\n",
+    "        print(count2* (\" \") + count * (\"#\"))\n",
+    "        \n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "     \n",
+    "     list_a = [-4, 3, -9, 4, 1]\n",
+    "     print (right_triangle(6))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**16 - Isosceles Triangle**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ##\n",
+      "    ####\n",
+      "   ######\n",
+      "  ########\n",
+      " ##########\n",
+      "############\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isosceles_triangle(n):\n",
+    "    \n",
+    "    count_1 = 0\n",
+    "    count_2 = n\n",
+    "    for a in range (n):\n",
+    "        count_1 += 1\n",
+    "        count_2 -= 1\n",
+    "        print(count_2* (\" \") + count_1 * (\"#\") + count_1 * (\"#\"))\n",
+    "        \n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "     \n",
+    "     list_a = [-4, 3, -9, 4, 1]\n",
+    "     print (isosceles_triangle(6))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**17 - Upside Down Isosceles Triangle**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       ##########\n",
+      "        ########\n",
+      "         ######\n",
+      "          ####\n",
+      "           ##\n",
+      "            \n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def upside_down_isosceles_triangle(n):\n",
+    "    \n",
+    "    count_1 = n\n",
+    "    count_2 = n\n",
+    "    for a in range (n):\n",
+    "        count_1 -= 1\n",
+    "        count_2 += 1\n",
+    "        print(count_2* (\" \") + count_1 * (\"#\") + count_1 * (\"#\"))\n",
+    "        \n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "     \n",
+    "     list_a = [-4, 3, -9, 4, 1]\n",
+    "     print (upside_down_isosceles_triangle(6))"
    ]
   }
  ],
